// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/CheckBox CheckBox with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-czstdm-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Not checked single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-xxls4w-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Checked Single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-xxls4w-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Disabled single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-1xsj2pz-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-1qulgwb-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Not checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-1xsj2pz-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Disabled checked intermediate
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox without 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-xxls4w-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-czstdm-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-1xsj2pz-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-1qulgwb-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-1qulgwb-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;
